--- a/menu.html
+++ b/menu.html
@@ -31,19 +31,19 @@
       <div class="cards">
         <div class="card">
           <h3>Creatividad</h3>
-          <p id="totalC">0 horas</p>
+          <p id="totalCreatividad">0 horas</p>
         </div>
         <div class="card">
           <h3>Actividad</h3>
-          <p id="totalA">0 horas</p>
+          <p id="totalActividad">0 horas</p>
         </div>
         <div class="card">
           <h3>Servicio</h3>
-          <p id="totalS">0 horas</p>
+          <p id="totalServicio">0 horas</p>
         </div>
         <div class="card highlight">
           <h3>Total General</h3>
-          <p id="totalGeneral">0 horas</p>
+          <p id="totalHoras">0 horas</p>
         </div>
       </div>
     </section>
