--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
   <title>CAS Tracker - Iniciar sesión</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <style>
-    body { font-family: system-ui, Arial; max-width: 400px; margin: 50px auto; text-align: center; }
-    input, button { display:block; width:100%; margin:10px 0; padding:8px; }
+    body { font-family: system-ui, Arial; display:flex; flex-direction:column; align-items:center; justify-content:center; height:100vh; background:#f4f4f4; }
+    form { background:#fff; padding:20px; border-radius:10px; box-shadow:0 0 10px rgba(0,0,0,0.1); display:flex; flex-direction:column; width:300px; }
+    input { margin-bottom:10px; padding:8px; border-radius:5px; border:1px solid #ccc; }
+    button { padding:10px; border:none; background:#007bff; color:#fff; border-radius:5px; cursor:pointer; }
+    button:hover { background:#0056b3; }
   </style>
 </head>
 <body>
